k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-app
  #labels:
  #  app.kubernetes.io/name: users-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.local
      secretName: demo-local-tls
  rules:
  - host: demo.local
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api(/|$)(.*)
        backend:
          service:
            name: keda-interceptor-proxy
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port: 
              number: 80
